tests/Fixtures/Torture/Bad/cond_int.g
// EXPECT G029
kernel { entry func Main() { if (5) { } } }
